# EGIAmpServerCli

./: CMakeLists.txt  README.md  amp.cfg
include/: EGIClient.hpp
src/: EGIClient.cpp  main.cpp
